--- a/bootcamp-app/package.json
+++ b/bootcamp-app/package.json
@@ -25,6 +25,8 @@
     },
     "dependencies": {
         "@vue/cli-plugin-vuex": "^5.0.4",
+        "bootstrap-icons": "^1.8.1",
+        "mdb-vue-ui-kit": "^1.12.0",
         "vue-router": "^2.7.0",
         "vuex": "^3.6.2"
     }
